// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default props 1`] = `
<div>
  <ul
    class="_list-container"
  >
    test
  </ul>
</div>
`;

exports[`With classname 1`] = `
<div>
  <ul
    class="_list-container myClass"
  >
    test
  </ul>
</div>
`;
